# wgpull

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  Makefile  README.md  REFERENCES.md  create_ipk_package.sh  lighthouse.toml  node.toml  wgpull.conf
crates/lighthouse/: Cargo.toml
crates/lighthouse/src/: context.rs  main.rs  metrics.rs  peer_pair.rs  state.rs
crates/lighthouse/src/handler/: error.rs  metrics.rs  middleware.rs  mod.rs  pull.rs
crates/node/: Cargo.toml
crates/node/src/: agent.rs  context.rs  discover.rs  main.rs  state.rs
crates/node/src/backend/: interface.rs  mod.rs
crates/node/src/backend/systemd/: backend.rs  command.rs  mod.rs
crates/node/src/backend/uci/: backend.rs  command.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  file.rs  logger.rs  mod.rs  response.rs  validation.rs  wg.rs
package/debian/: wgpull-lighthouse.service  wgpull-node.service  wgpull.conf
package/openwrt/etc/init.d/: wgpull-lighthouse  wgpull-node
package/openwrt/etc/wgpull/: wgpull.conf
src/: lighthouse_bin.rs  node_bin.rs
src/lighthouse/: config.rs  context.rs  metrics.rs  mod.rs  peer_pair.rs  state.rs
src/lighthouse/handler/: helpers.rs  metrics.rs  middleware.rs  mod.rs  pull.rs
src/node/: agent.rs  config.rs  context.rs  discover.rs  mod.rs  state.rs
src/node/backend/: interface.rs  mod.rs
src/node/backend/systemd/: backend.rs  command.rs  config.rs  mod.rs
src/node/backend/uci/: backend.rs  command.rs  config.rs  mod.rs
src/shared/: challenge.rs  client.rs  command.rs  config.rs  file.rs  headers.rs  logger.rs  mod.rs  request.rs  response.rs  time.rs  validation.rs  wg.rs
test/e2e/: .gitignore  Dockerfile  Makefile  README.md  setup_bridge.sh  ssh_key  ssh_key.pub
test/e2e/pytests/: config.py  requirements.txt  test_openwrt_network.py  test_ubuntu_network.py  utils.py
test/e2e/pytests/fixtures/openwrt/: lighthouse.conf  node1.conf  node2.conf
test/e2e/pytests/fixtures/ubuntu/: lighthouse.conf  node1.conf  node2.conf
test/e2e/qemu/openwrt/: setup_openwrt_qemu.sh  start_openwrt_qemu.sh
test/e2e/qemu/packer/: after_install_setup.sh  start_ubuntu_20_04_qemu.sh  ubuntu_20_04_amd64.pkr.hcl
test/e2e/qemu/packer/http/: user-data
