[package]
name = "wgpull_shared"
version = "0.2.0"
edition = "2021"
description = "A Wireguard configuration management system"
authors = ["Matthias Hecker"]
keywords = ["wireguard", "linux", "openwrt"]
repository = "https://github.com/mattzque/wgpull"
license = "MIT"

[lib]
name = "wgpull_shared"
path = "./src/mod.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
ipnet = "2.9"
chrono = "0.4"
base64 = "0.22"
futures-util = "0.3"
axum = "0.7"
axum-macros = "0.4"
async-trait = "0.1"
tokio = { version = "1.39", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }
